@@ -21,7 +21,7 @@
 #include <vector>
 
 #include <zorba/config.h>
-#include <zorbautils/hashmap_zstring.h>
+#include <zorbautils/hashmap_cstring.h>
 
 #include "store/api/item_handle.h"
 #include "store/api/iterator.h"
@@ -241,7 +241,8 @@ public:
 class SimpleJSONObject : public JSONObject
 {
 protected:
-  ZSTRING_HASH_MAP(csize, Keys);
+  CSTRING_HASH_MAP(csize, Keys);
+
   typedef std::vector<std::pair<store::Item*, store::Item*> > Pairs;
 
   class KeyIterator : public store::Iterator
