@@ -15,6 +15,7 @@ Optimizations:
   * New memory management for compiler expressions (no more ref counting)
   * Exteneded some optimization rules (variable inlining/elimination and positional
     predicate rewrite) to general flwor expressions.
+  * Use char* instead of zstring as the hashmap key in json objects
 
 Bug Fixes/Other Changes:
   * Fixed bug #867227 (Improved error message for missing commas)
@@ -37,6 +38,8 @@ Bug Fixes/Other Changes:
   * Fixed bug #866984 (better error message for an eval error)
   * Fixed bug #1047538 (jsoniq: SourceFinder::findLocalNodeSources missing
     json expressions)
+  * Fixed bug #1046559 (dynamic resolution between function invocation and jsoniq
+    navigation)
   * Fixed bug #932884 (HTML and XHTML serialization of empty elements)
   * Fixed bug #1045902 (file:last-modified returns current date time)
   * Fixed bug #1043976 (compiler warning in serialiser code)
